2011-10-10  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 3.3+beta3.

2011-10-10  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.3+beta2 release.

	* CHANGES: Updated.

	* INSTALL: Note dependency on openvas-libraries >= 5.0+beta2.

2011-10-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Use awk instead of read since the "-d"
	option is not available in all shells.

2011-10-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* ChangeLog: Describe UTC relation to Manager in last entry.

2011-10-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/openvassd.c (main): Enforce UTC.  When using Scanner with Manager
	either the Scanner must have been using UTC already, or the Manager must
	migrate the existing data (r11730) before using this Scanner version.

2011-09-12  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/oval_plugins.c (ovaldi_launch): Tighten security for ovaldi
	launch: Ensure file names are not easily guessable, drop privileges
	early and place files in a randomly named temporary directory after
	privileges have been dropped. Improve cleanup after ovaldi launch.

2011-08-12  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Update VERSION.

2011-08-12  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Add support for syncport setting.

2011-08-12  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Switch Manager DB rebuild to signal based
	mechanism.

2011-07-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* ChangeLog: Always close the parentheses on the line they are opened on,
	as this is much easier to parse.

2011-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/oval_plugins.c: Fixed rationale for a include.

2011-07-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
