@@ -1,3 +1,8 @@
+2011-11-10  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	* CMakeLists.txt: Adjust source locations in install command to enable
+	installation from an out-of-source build.
+
 2011-10-10  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	Post release version bump.
